added close button to dismiss overallscore message

--- a/public/src/app/score/overallScore.html
+++ b/public/src/app/score/overallScore.html
@@ -1,4 +1,7 @@
 <md-bottom-sheet>
+    <div layout="row" class="overallScoreDisplayArea" layout-align="end center">
+        <span ng-click=vm.hideResult() class="close-view">X</span>
+    </div>
     <div layout="row" class="overallScoreDisplayArea" layout-align="center center">
         <div>
             <h4>Overall Score<div >{{vm.overallScore}}</div></h4>
